fix: shorten hr so that it's not too big on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -274,7 +274,7 @@ nav a:hover {
 }
 
 .clients hr {
-  width: 80%;
+  width: 50%;
   margin-left: auto;
   margin-right: auto;
   color: #ffffff;
